# homework20150422

./: README.md
20150422/: CMakeLists.txt  README  README-koyama-submit.md  README.48156529  README.md  README_48-156101.md  README_48156515.md  package.xml  read.md  ros_cv.cpp
20150422/launch/: 48156504.launch  48156515_face_detect.launch  camera.launch  copy.launch  face_hide.py  hoge.launch  homework_image_proc.launch  image_processing.launch  image_processing_48156529.launch  ip.launch  mean.launch  mirror_camera.launch  mosaic.launch  myImgProc.launch  my_detect.launch  mydetectnode.launch  see_your_face.launch  y-tanaka_img_proc.launch
20150422/scripts/: .#script_detection.py  48156504.py  48156515_face_detect_mono.py  face_detect_mono.py  face_detect_mono_copy.py  face_hide.py  homework_image_proc.py  image_handler.py  image_proc.py  image_processor_48156529.py  mirror.py  monokuro_camera.py  mosaic.py  myProc.py  my_detect.py  my_program.py  mynode.py  script_detection.py  test.py
20150422/src/: image_proc.cpp  mean.cpp  pub_pseudo_organized_image_points2.cpp
